# forbidden-screenshot

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
